<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
    <LinearLayout 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="20sp">
        <TextView
            android:id="@+id/title"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/forgot_password_title"
            android:textSize="20sp"
            android:textStyle="bold"/>
    </LinearLayout>
    
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10sp">
        <TextView 
            android:id="@+id/instructions"
            android:layout_width="fill_parent"
        	android:layout_height="wrap_content"
        	android:text="@string/forgot_password_instructions"
        	android:paddingBottom="15sp"
        	android:paddingLeft="2sp"/>
        <TextView 
            android:id="@+id/email_label"
            android:layout_width="fill_parent"
        	android:layout_height="wrap_content"
        	android:text="@string/email_label"
        	android:paddingBottom="7sp"
        	android:paddingLeft="2sp"/>
        <EditText
            android:id="@+id/email_field"
            android:layout_width="fill_parent"
        	android:layout_height="wrap_content"
        	android:background="@android:drawable/editbox_background"
        	android:inputType="textEmailAddress"/>
    </LinearLayout>
    
    <LinearLayout
	    android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_horizontal"
        android:padding="10sp">
        <Button
            android:id="@+id/submit"
            android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        	android:onClick="onClick"
        	android:text="@string/submit"/>
	    <Button
            android:id="@+id/cancel"
            android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        	android:onClick="onClick"
        	android:text="@string/cancel"/>
	</LinearLayout>

</LinearLayout>