<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" 
    android:orientation="vertical">
    
    <!-- TITLE: BEGIN -->
    <TextView
        android:id="@+id/title"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/new_account_title"
        android:textSize="20sp"
        android:textStyle="bold"
        android:padding="20sp"/>
    <!-- TITLE: END -->
    
    <!-- FORM: BEGIN -->
    <ScrollView
        android:id="@+id/form"
        android:layout_width="fill_parent"
        android:layout_height="355dp"
        android:fillViewport="true">
	    <LinearLayout
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:orientation="vertical"
	        android:paddingLeft="7sp"
	        android:paddingRight="7sp">
	        <TextView 
	            android:id="@+id/first_name_label"
	            android:layout_width="fill_parent"
	        	android:layout_height="wrap_content"
	        	android:text="@string/first_name"
	        	android:paddingBottom="7sp"
	        	android:paddingLeft="2sp"/>
	        <EditText
	            android:id="@+id/first_name_field"
	            android:layout_width="fill_parent"
	        	android:layout_height="wrap_content"
	        	android:background="@android:drawable/editbox_background"
	        	android:inputType="text"/>
	        <TextView 
	            android:id="@+id/last_name_label"
	            android:layout_width="fill_parent"
	        	android:layout_height="wrap_content"
	        	android:text="@string/last_name"
	        	android:paddingTop="7sp"
	        	android:paddingBottom="7sp"
	        	android:paddingLeft="2sp"/>
	        <EditText
	            android:id="@+id/last_name_field"
	            android:layout_width="fill_parent"
	        	android:layout_height="wrap_content"
	        	android:background="@android:drawable/editbox_background"
	        	android:inputType="text"/>
	        <TextView 
	            android:id="@+id/email_label"
	            android:layout_width="fill_parent"
	        	android:layout_height="wrap_content"
	        	android:text="@string/email_label"
	        	android:paddingBottom="7sp"
	        	android:paddingTop="7sp"
	        	android:paddingLeft="2sp"/>
	        <EditText
	            android:id="@+id/email_field"
	            android:layout_width="fill_parent"
	        	android:layout_height="wrap_content"
	        	android:background="@android:drawable/editbox_background"
	        	android:inputType="textEmailAddress"/>
	        <TextView 
	            android:id="@+id/password_label"
	            android:layout_width="fill_parent"
	        	android:layout_height="wrap_content"
	        	android:text="@string/password_label"
	        	android:paddingBottom="7sp"
	        	android:paddingTop="7sp"
	        	android:paddingLeft="2sp"/>
	        <EditText
	            android:id="@+id/password_field"
	            android:layout_width="fill_parent"
	        	android:layout_height="wrap_content"
	        	android:background="@android:drawable/editbox_background"
	        	android:inputType="textPassword"/>
	        <TextView 
	            android:id="@+id/retype_password_label"
	            android:layout_width="fill_parent"
	        	android:layout_height="wrap_content"
	        	android:text="@string/retype_password_label"
	        	android:paddingBottom="7sp"
	        	android:paddingTop="7sp"
	        	android:paddingLeft="2sp"/>
	        <EditText
	            android:id="@+id/retype_password_field"
	            android:layout_width="fill_parent"
	        	android:layout_height="wrap_content"
	        	android:background="@android:drawable/editbox_background"
	        	android:inputType="textPassword"/>
	    </LinearLayout>
    </ScrollView>
    <!-- FORM: END -->

    <!-- BUTTONS: BEGIN -->
    <RelativeLayout
        android:id="@+id/buttons"
	    android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:background="@color/grey"
        android:padding="10sp">
        <Button
            android:id="@+id/cont"
            android:layout_width="150sp"
        	android:layout_height="wrap_content"
        	android:onClick="onClick"
        	android:text="@string/cont"/>
	    <Button
            android:id="@+id/cancel"
            android:layout_width="150sp"
        	android:layout_height="wrap_content"
        	android:layout_toRightOf="@id/cont"
        	android:onClick="onClick"
        	android:text="@string/cancel"/>
	</RelativeLayout>
    <!-- BUTTONS: END -->
    
</LinearLayout>