<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/backrepeat"
    android:orientation="vertical" >
    
    <!-- Title: BEGIN -->
    <TextView
        android:id="@+id/title"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="Edit Profile"
        android:textSize="20sp"
        android:textStyle="bold"
        android:padding="40sp"/>
    <!-- Title: END -->
    
    <!-- Menu Items: BEGIN -->
	<LinearLayout 
	    android:layout_width="fill_parent"
	    android:layout_height="315sp"
	    android:orientation="vertical"
	    android:gravity="center_horizontal"
	    >
	    <Button
	        android:id="@+id/edit_name_button"
	        android:layout_width="250sp"
	        android:layout_height="wrap_content"
	        android:onClick="onClick"
        	android:text="@string/edit_name">	        
	    </Button>
	    <Button
	        android:id="@+id/edit_provide_button"
	        android:layout_width="250sp"
	        android:layout_height="wrap_content"
	        android:onClick="onClick"
        	android:text="@string/edit_provide">	        
	    </Button>
	    <Button
	        android:id="@+id/edit_consumer_button"
	        android:layout_width="250sp"
	        android:layout_height="wrap_content"
	        android:onClick="onClick"
        	android:text="@string/edit_consumer">	        
	    </Button>
	</LinearLayout>
    <!-- Menu Items: END -->
    
    <!-- BUTTONS: BEGIN -->
    <RelativeLayout
	    android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:background="@color/grey"
        android:padding="10sp">
	    <Button
            android:id="@+id/back"
            android:layout_width="150sp"
        	android:layout_height="wrap_content"
        	android:onClick="onClick"
        	android:text="@string/back"/>
	</RelativeLayout>
    <!-- BUTTONS: END -->

</LinearLayout>